added description to the "tree title click check" check

--- a/hometasks/hometask-03-06-2013/tree-title-click-check.html
+++ b/hometasks/hometask-03-06-2013/tree-title-click-check.html
@@ -50,6 +50,9 @@
 
 <script>
 
+    /* Дерево: проверка клика на заголовке, http://learn.javascript.ru/task/derevo-proverka-klika-na-zagolovke */
+    /* Андрей Порубов */
+
     var tree = document.getElementById('tree');
 
     tree.onclick = function(evt) {
